# babysit

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/skills/babysit/: SKILL.md
.codex/skills/: babysit
.codex/skills/babysit/: SKILL.md
.github/workflows/: ci.yml  release.yml
gateway/: README.md  package.json  tsconfig.json  tsconfig.smoke.json  vitest.config.ts  wrangler.toml
gateway/scripts/: smoke-delivery-id.ts  smoke-env.ts  smoke.ts
gateway/src/: github.ts  replay.ts  wake.ts  worker.ts
gateway/test/: gateway.test.ts  replay.test.ts  smoke-delivery-id.test.ts  smoke-env.test.ts
gateway/test/fixtures/: github-check-run-multiple-prs.json  github-check-run.json  github-check-suite-multiple-prs.json  github-check-suite.json  github-status.json  (+6 more)
openwiki/: .last-update.json  INSTRUCTIONS.md  quickstart.md  testing.md
openwiki/architecture/: runtime.md
openwiki/domain/: review-findings.md
openwiki/integrations/: forges.md
openwiki/operations/: gateway.md
plans/: 001-github-actions-ci.md  002-wait-accepts-fresh-snapshot-at-deadline.md  003-gateway-delivery-characterization-tests.md  004-gateway-delivery-hardening.md  005-event-idle-keeps-socket.md  006-small-fixes-batch.md  007-openwiki-refresh.md  README.md
skills/babysit/: SKILL.md
src/: bots.rs  cli.rs  core.rs  credentials.rs  event.rs  forge.rs  github.rs  github_webhook.rs  gitlab.rs  lib.rs  main.rs  wait.rs
src/bots/: mod.rs  regexes.rs
src/forge/: gitlab.rs
tests/: babysit.rs  babysit_cli.rs  credentials.rs  event_wait.rs  github_webhook.rs  skill_layout.rs  wait_loop.rs
tests/fixtures/: bugbot-inline-comment.md  bugbot-review-body.md  coderabbit-inline-comment.md  coderabbit-review-body.md  codex-inline-comment.md  gitlab-discussions.json  gitlab-jobs.json  gitlab-mr-merged.json  gitlab-mr-open.json  pr-view.json
