[package]
name = "babysit"
version = "1.0.2"
edition = "2024"
description = "Watch pull requests and merge requests for CI status and bot review findings."
license = "MIT"
repository = "https://github.com/volker48/babysit"
readme = "README.md"

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
rand = "=0.9.3"
regex = "1.11.1"
serde_json = "1.0.133"
rpassword = "=7.4.0"
rustls = { version = "=0.23.41", default-features = false, features = ["ring", "std"] }
tungstenite = { version = "=0.29.0", default-features = false, features = ["handshake", "rustls-tls-webpki-roots", "url"] }
url = "=2.5.8"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "=3.6.3", default-features = false, features = ["apple-native"] }
